--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,11 @@
         android:id="@+id/nav_home"
         android:name="com.example.prm392_project.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_bookInfoFragment"
+            app:destination="@id/bookInfoFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_chat"
@@ -22,4 +26,13 @@
         android:name="com.example.prm392_project.ui.account.AccountFragment"
         android:label="Account"
         tools:layout="@layout/fragment_message" />
+    <fragment
+        android:id="@+id/bookInfoFragment"
+        android:name="com.example.prm392_project.ui.book.info.BookInfoFragment"
+        android:label="fragment_book_info"
+        tools:layout="@layout/fragment_book_info" >
+        <action
+            android:id="@+id/action_bookInfoFragment_to_nav_home"
+            app:destination="@id/nav_home" />
+    </fragment>
 </navigation>
