--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -1,50 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardView="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/book_card"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:layout_margin="5dp"
-    cardView:cardCornerRadius="5dp"
-    cardView:cardElevation="5dp">
-
+    android:layout_height="wrap_content"
+    android:backgroundTint="@color/cardview_shadow_end_color">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/book_title"
-            android:layout_width="wrap_content"
+            android:id="@+id/comment_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="14dp"
-            android:text="Title"
-            android:textAlignment="center"
+            android:padding="10dp"
+            android:text="Content"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            cardView:layout_constraintBottom_toTopOf="@+id/book_author"
+            android:textSize="18sp"
+            android:textStyle="italic"
+            cardView:layout_constraintBottom_toTopOf="@+id/comment_username"
             cardView:layout_constraintEnd_toEndOf="parent"
-            cardView:layout_constraintHorizontal_bias="0.5"
             cardView:layout_constraintStart_toStartOf="parent"
             cardView:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/book_author"
-            android:layout_width="wrap_content"
+            android:id="@+id/comment_username"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="14dp"
-            android:text="Author"
-            android:textAlignment="center"
+            android:padding="8dp"
+            android:text="Username"
+            android:textAlignment="textEnd"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:textStyle="italic"
             cardView:layout_constraintBottom_toBottomOf="parent"
             cardView:layout_constraintEnd_toEndOf="parent"
-            cardView:layout_constraintHorizontal_bias="0.5"
             cardView:layout_constraintStart_toStartOf="parent"
-            cardView:layout_constraintTop_toBottomOf="@+id/book_title" />
+            cardView:layout_constraintTop_toBottomOf="@+id/comment_content" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 </androidx.cardview.widget.CardView>
