--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,6 +27,11 @@
         android:label="Account"
         tools:layout="@layout/fragment_message" />
     <fragment
+        android:id="@+id/nav_admin"
+        android:name="com.example.prm392_project.ui.account.AccountFragment"
+        android:label="Admin"
+        tools:layout="@layout/fragment_admin" />
+    <fragment
         android:id="@+id/bookInfoFragment"
         android:name="com.example.prm392_project.ui.book.info.BookInfoFragment"
         android:label="Book Info"
@@ -35,4 +40,5 @@
             android:id="@+id/action_bookInfoFragment_to_nav_home"
             app:destination="@id/nav_home" />
     </fragment>
+
 </navigation>
