--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,7 +28,7 @@
         tools:layout="@layout/fragment_message" />
     <fragment
         android:id="@+id/nav_admin"
-        android:name="com.example.prm392_project.ui.account.AccountFragment"
+        android:name="com.example.prm392_project.ui.admin.AdminFragment"
         android:label="Admin"
         tools:layout="@layout/fragment_admin" />
     <fragment
