--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,4 +35,9 @@
             android:id="@+id/action_bookInfoFragment_to_nav_home"
             app:destination="@id/nav_home" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_category"
+        android:name="com.example.prm392_project.ui.category.CategoryFragment"
+        android:label="Categories"
+        tools:layout="@layout/fragment_category" />
 </navigation>
