--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -44,5 +44,9 @@
         android:id="@+id/nav_category"
         android:name="com.example.prm392_project.ui.category.CategoryFragment"
         android:label="Categories"
-        tools:layout="@layout/fragment_category" />
+        tools:layout="@layout/fragment_category" >
+        <action
+            android:id="@+id/action_nav_category_to_nav_home"
+            app:destination="@id/nav_home" />
+    </fragment>
 </navigation>
