update ChatFragment, add model, dto, repo

--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:text="Content"
+            android:text="@string/comment_content"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textSize="18sp"
             android:textStyle="italic"
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
-            android:text="Username"
+            android:text="@string/comment_username"
             android:textAlignment="textEnd"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
             android:textSize="14sp"
