--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,9 +17,9 @@
 
     <fragment
         android:id="@+id/nav_chat"
-        android:name="com.example.prm392_project.ui.chat.ChatFragment"
+        android:name="com.example.prm392_project.ui.chat.FeedbackFragment"
         android:label="@string/menu_chat"
-        tools:layout="@layout/fragment_chat" />
+        tools:layout="@layout/fragment_feedback" />
 
     <fragment
         android:id="@+id/nav_account"
