--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,26 +6,28 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/ic_book"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_category"
-            android:icon="@android:drawable/ic_input_get"
+            android:icon="@drawable/ic_category"
             android:title="Category" />
         <item
             android:id="@+id/nav_chat"
-            android:icon="@android:drawable/sym_action_chat"
+            android:icon="@android:drawable/sym_action_email"
             android:title="@string/menu_chat" />
         <item
             android:id="@+id/nav_account"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_account"
             android:title="@string/account" />
+        <item
+            android:id="@+id/nav_admin"
+            android:icon="@android:drawable/ic_menu_manage"
+            android:title="Admin" />
         <item
             android:id="@+id/nav_logout"
             android:icon="@android:drawable/ic_lock_power_off"
             android:title="@string/logout" />
-        <item
-            android:id="@+id/nav_admin"
-            android:title="Admin" />
+
     </group>
 </menu>
