--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_nav_home_to_bookInfoFragment"
             app:destination="@id/bookInfoFragment" />
+        <action
+            android:id="@+id/action_nav_home_to_adCateFrag"
+            app:destination="@id/adCateFrag" />
     </fragment>
 
     <fragment
@@ -30,7 +33,11 @@
         android:id="@+id/nav_admin"
         android:name="com.example.prm392_project.ui.admin.AdminFragment"
         android:label="Admin"
-        tools:layout="@layout/fragment_admin" />
+        tools:layout="@layout/fragment_admin" >
+        <action
+            android:id="@+id/action_nav_admin_to_adCateFrag"
+            app:destination="@id/adCateFrag" />
+    </fragment>
     <fragment
         android:id="@+id/bookInfoFragment"
         android:name="com.example.prm392_project.ui.book.info.BookInfoFragment"
@@ -45,4 +52,22 @@
         android:name="com.example.prm392_project.ui.category.CategoryFragment"
         android:label="Categories"
         tools:layout="@layout/fragment_category" />
+    <fragment
+        android:id="@+id/adCateFrag"
+        android:name="com.example.prm392_project.ui.admin.adcategory.adCateFrag"
+        android:label="fragment_ad_cate"
+        tools:layout="@layout/fragment_ad_cate" >
+        <action
+            android:id="@+id/action_adCateFrag_self"
+            app:destination="@id/adCateFrag" />
+    </fragment>
+    <dialog
+        android:id="@+id/popUpFragment"
+        android:name="com.example.prm392_project.ui.admin.adcategory.PopUpFragment"
+        android:label="fragment_pop_up"
+        tools:layout="@layout/fragment_pop_up" >
+        <action
+            android:id="@+id/action_popUpFragment_to_adCateFrag"
+            app:destination="@id/adCateFrag" />
+    </dialog>
 </navigation>
