--- a/app/src/main/res/layout/activity_admin_book.xml
+++ b/app/src/main/res/layout/activity_admin_book.xml
@@ -113,4 +113,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_txt_content" />
+
+    <ListView
+        android:id="@+id/activity_admin_book_lv_book"
+        android:layout_width="409dp"
+        android:layout_height="295dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_btn_update" />
 </androidx.constraintlayout.widget.ConstraintLayout>
