--- a/app/src/main/res/layout/activity_admin_book_item_book.xml
+++ b/app/src/main/res/layout/activity_admin_book_item_book.xml
@@ -6,50 +6,108 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/activity_admin_book_lb_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="Id"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/activity_admin_book_lb_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="Title"
-        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_lb_id"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/activity_admin_book_lb_author"
+        android:id="@+id/activity_admin_book_lb_id2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="Author"
+        android:text="@string/entity_book_id"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_lb_id" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/activity_admin_book_lb_content"
+        android:id="@+id/activity_admin_book_lb_title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:text="Content"
+        android:layout_marginTop="5dp"
+        android:text="@string/entity_book_title"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_lb_author" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_lb_id2" />
+
+    <TextView
+        android:id="@+id/activity_admin_book_lb_author2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/entity_book_author"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_lb_title2" />
+
+    <TextView
+        android:id="@+id/activity_admin_book_lb_category_name2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/entity_book_category"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_lb_content2" />
+
+    <TextView
+        android:id="@+id/activity_admin_book_lb_content2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/entity_book_content"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_lb_author2" />
 
     <TextView
         android:id="@+id/activity_admin_book_lb_category_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
         android:text="CategoryName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_admin_book_lb_content" />
+        app:layout_constraintBottom_toBottomOf="@+id/activity_admin_book_lb_category_name2"
+        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_lb_category_name2"
+        app:layout_constraintTop_toTopOf="@+id/activity_admin_book_lb_category_name2" />
+
+    <TextView
+        android:id="@+id/activity_admin_book_lb_id"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:text="Id"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_admin_book_lb_id2"
+        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_lb_id2"
+        app:layout_constraintTop_toTopOf="@+id/activity_admin_book_lb_id2" />
+
+    <TextView
+        android:id="@+id/activity_admin_book_lb_title"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:text="Title"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_admin_book_lb_title2"
+        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_lb_title2"
+        app:layout_constraintTop_toTopOf="@+id/activity_admin_book_lb_title2" />
+
+    <TextView
+        android:id="@+id/activity_admin_book_lb_author"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:text="Author"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_admin_book_lb_author2"
+        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_lb_author2"
+        app:layout_constraintTop_toTopOf="@+id/activity_admin_book_lb_author2" />
+
+    <TextView
+        android:id="@+id/activity_admin_book_lb_content"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:text="Content"
+        app:layout_constraintBottom_toBottomOf="@+id/activity_admin_book_lb_content2"
+        app:layout_constraintStart_toEndOf="@+id/activity_admin_book_lb_content2"
+        app:layout_constraintTop_toTopOf="@+id/activity_admin_book_lb_content2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
